# crystal

./: .gitignore  CMakeLists.txt  CMakePresets.json  plan.md  test_custom_gguf.sh  vcpkg.json
.github/workflows/: ci.yml
apps/class_builder/: CMakeLists.txt  main.cpp
apps/crystal_quantize/: CMakeLists.txt  main.cpp
apps/crystal_quantize_gui/: CMakeLists.txt  main.cpp
apps/fuzzy_builder/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  CrystalConfig.cmake.in
include/crystal/: crystal.hpp
include/crystal/core/: concepts.hpp  random.hpp  types.hpp
include/crystal/fuzzy/: fuzzy_ops.hpp  fuzzy_set.hpp
include/crystal/io/: gguf.hpp  gguf_types.hpp
include/crystal/math/: huge_int.hpp
include/crystal/nn/: activation.hpp  backprop.hpp  blob_network.hpp  layer.hpp  quantization.hpp  training.hpp
include/crystal/patterns/: factory.hpp  observer.hpp  strategy.hpp
include/crystal/quantize/: calibration.hpp  ensemble.hpp  gguf_writer.hpp  model_reader.hpp  pipeline.hpp  ternary_converter.hpp
src/: CMakeLists.txt
src/core/: random.cpp
src/fuzzy/: fuzzy_set.cpp
src/io/: gguf.cpp
src/math/: huge_int.cpp
src/nn/: backprop.cpp  blob_network.cpp  quantization.cpp
src/quantize/: calibration.cpp  ensemble.cpp  gguf_writer.cpp  model_reader.cpp  pipeline.cpp  ternary_converter.cpp
tests/: CMakeLists.txt  test_backprop_double.cpp  test_backprop_float.cpp  test_backprop_int.cpp  test_backprop_ternary.cpp  test_blob_network.cpp  test_fuzzy_set.cpp  test_gguf_io.cpp  test_quantization.cpp  test_quantize_pipeline.cpp  test_reflection.cpp
