function(crystal_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} crystal)
    target_compile_features(${name} PRIVATE cxx_std_20)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

crystal_add_test(test_fuzzy_set)
crystal_add_test(test_backprop_double)
crystal_add_test(test_backprop_float)
crystal_add_test(test_backprop_int)
crystal_add_test(test_backprop_ternary)
crystal_add_test(test_quantization)
crystal_add_test(test_gguf_io)
crystal_add_test(test_blob_network)
crystal_add_test(test_reflection)
crystal_add_test(test_quantize_pipeline)
